--- a/index.css
+++ b/index.css
@@ -4,18 +4,44 @@
     margin: 0;
     list-style: none;
     box-sizing: border-box;
+    
 }
 
 @font-face {
     font-family: "font-crash";
     src: url("./crash_a_like/crash-a-like.ttf");
 }
-li {
+p {
     font-family: "font-crash";
+    font-size: 40px;
+    text-align: center;
+    color: white;
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+    &:hover {
+        transform: scale(1.5);
+        -webkit-text-fill-color: rgb(169, 81, 15);
+        -webkit-text-stroke: 2px rgb(0, 0, 0);
+
+    }
 }
 body {
     background-image: url("./IMG/BACK.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-
+}
+main{
+   display: flex;   
+   justify-content: space-around;
+   align-items: flex-end;
+   flex-wrap: wrap;
+   height: 90vh;
+   /* background-color: aquamarine; */
+   margin-left: 100px;
+   justify-content: space-around;
+   width: 80%;
+   
+}
+img {
+    height: 220px; 
+    /* background: red; */    
 }
