--- a/index.css
+++ b/index.css
@@ -39,9 +39,16 @@ main{
    margin-left: 100px;
    justify-content: space-around;
    width: 80%;
-   
+   cursor:none;
 }
 img {
-    height: 220px; 
+    height: 150px; 
     /* background: red; */    
 }
+div {
+    display: flex;
+    justify-content: center;
+    gap: 10vh;
+
+}
+
